--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 		<componentName>Jpahibernate</componentName>
  		<jiraProjectName>JPAHIBERNATE</jiraProjectName>
 		<jiraComponentId>10353</jiraComponentId>
-        <hibernate-entitymanager-version>3.5.3-Final</hibernate-entitymanager-version>
+        <hibernate-entitymanager-version>3.6.4.Final</hibernate-entitymanager-version>
         <cglib-version>2.2</cglib-version>
     </properties>
 
@@ -67,11 +67,6 @@
             <groupId>concurrent</groupId>
             <artifactId>concurrent</artifactId>
             <version>1.3.4</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>1.4.2</version>
         </dependency>
     </dependencies>
     <scm>
