--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
  		<jiraProjectName>JPAHIBERNATE</jiraProjectName>
 		<jiraComponentId>10353</jiraComponentId>
         <hibernate-entitymanager-version>3.6.4.Final</hibernate-entitymanager-version>
-        <cglib-version>2.2</cglib-version>
+        <cglib-version>2.2.2</cglib-version>
     </properties>
 
     <repositories>
@@ -61,7 +61,7 @@
         <dependency>
             <groupId>cglib</groupId>
             <artifactId>cglib-nodep</artifactId>
-            <version>2.2</version>
+            <version>${cglib-version}</version>
         </dependency>
         <dependency>
             <groupId>concurrent</groupId>
