JPAHIBERNATE-9 : Add hibernate-ehcache dependency
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/module-jpa-hibernate@31043 bab10101-e421-0410-a517-8ce0973de3ef

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
             
         </dependency>
         <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-ehcache</artifactId>
+            <version>${hibernate-entitymanager-version}</version>
+        </dependency>
+        <dependency>
             <groupId>cglib</groupId>
             <artifactId>cglib-nodep</artifactId>
             <version>${cglib-version}</version>
