JPAHIBERNATE-10 : Add statistics management
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/module-jpa-hibernate@33627 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/jpa/modules/hibernate/resources/hibernate_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/jpa/modules/hibernate/resources/hibernate_messages.properties
@@ -6,3 +6,25 @@
 # Plugin infos
 module.description=Hibernate Module for plugin JPA plugin
 module.provider=Mairie de Paris
+
+# Monitor
+monitor.adminFeature.title=Hibernate Monitoring
+monitor.adminFeature.description=Shows Hibernate's stats
+monitor.pageTitle=Hibernate statistics
+monitor.jmx.title=JMX
+monitor.jmx.status=Status
+monitor.jmx.activated=OK
+monitor.jmx.buttonActivate=Enable
+monitor.jmx.notActivated=Disabled
+monitor.stats.title=Statistics
+monitor.stats.state=Status
+monitor.stats.buttonDisable=Disable
+monitor.stats.buttonEnable=Enable
+monitor.stats.pool=Pool
+monitor.stats.disabled=Statistics are disabled
+monitor.stats.startTime=Start time
+monitor.stats.entities=Entities
+monitor.stats.sessions=Sessions/Transactions
+monitor.stats.queries=Queries
+monitor.stats.cache=Cache
+monitor.stats.buttonClear=Clear statistics
