--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,14 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-ehcache</artifactId>
             <version>${hibernate-entitymanager-version}</version>
+            <!-- core already provides JPA 2.0 spec. -->
+            <exclusions>
+		        <exclusion>
+		        	<groupId>org.hibernate.javax.persistence</groupId>
+		        	<artifactId>hibernate-jpa-2.0-api</artifactId>
+		        </exclusion>
+		    </exclusions>
+            
         </dependency>
         <dependency>
             <groupId>cglib</groupId>
