Remove jboss repository
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/module-jpa-hibernate@42901 bab10101-e421-0410-a517-8ce0973de3ef

--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,11 @@
             <url>http://dev.lutece.paris.fr/maven_repository</url>
             <layout>default</layout>
         </repository>
-        <repository>
+        <!-- <repository>
             <id>JBoss</id>
             <name>jbossRepository</name>
             <url>http://repository.jboss.org/nexus/content/groups/public</url>
-        </repository>
+        </repository> -->
     </repositories>
 
     <dependencies>
