--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,11 @@
     <name>Lutece jpa-hibernate module</name>
 
     <properties>
-		<componentName>Jpahibernate</componentName>
- 		<jiraProjectName>JPAHIBERNATE</jiraProjectName>
-		<jiraComponentId>10353</jiraComponentId>
-		<hibernate-entitymanager-version>4.0.1.Final</hibernate-entitymanager-version>
-		<cglib-version>2.2.2</cglib-version>
+        <componentName>Jpahibernate</componentName>
+        <jiraProjectName>JPAHIBERNATE</jiraProjectName>
+        <jiraComponentId>10353</jiraComponentId>
+        <hibernate-entitymanager-version>4.0.1.Final</hibernate-entitymanager-version>
+        <cglib-version>2.2.2</cglib-version>
     </properties>
 
     <repositories>
@@ -37,12 +37,12 @@
 
     <dependencies>
         <!-- Lutece CORE  -->
-	<dependency>
-	    <groupId>fr.paris.lutece</groupId>
-	    <artifactId>lutece-core</artifactId>
-	    <version>[2.4.0,5.0.0-SNAPSHOT)</version>
-	    <type>lutece-core</type>
-	</dependency>
+        <dependency>
+            <groupId>fr.paris.lutece</groupId>
+            <artifactId>lutece-core</artifactId>
+            <version>[4.0.0,)</version>
+            <type>lutece-core</type>
+        </dependency>
         
         <!-- Hibernate -->
         <dependency>
@@ -51,11 +51,11 @@
             <version>${hibernate-entitymanager-version}</version>
             <!-- core already provides JPA 2.0 spec. -->
             <exclusions>
-		        <exclusion>
-		        	<groupId>org.hibernate.javax.persistence</groupId>
-		        	<artifactId>hibernate-jpa-2.0-api</artifactId>
-		        </exclusion>
-		    </exclusions>
+                <exclusion>
+                    <groupId>org.hibernate.javax.persistence</groupId>
+                    <artifactId>hibernate-jpa-2.0-api</artifactId>
+                </exclusion>
+            </exclusions>
             
         </dependency>
         <dependency>
@@ -64,11 +64,11 @@
             <version>${hibernate-entitymanager-version}</version>
             <!-- core already provides JPA 2.0 spec. -->
             <exclusions>
-		        <exclusion>
-		        	<groupId>org.hibernate.javax.persistence</groupId>
-		        	<artifactId>hibernate-jpa-2.0-api</artifactId>
-		        </exclusion>
-		    </exclusions>
+                <exclusion>
+                    <groupId>org.hibernate.javax.persistence</groupId>
+                    <artifactId>hibernate-jpa-2.0-api</artifactId>
+                </exclusion>
+            </exclusions>
             
         </dependency>
         <dependency>
