--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <parent>
-        <artifactId>lutece-plugins-pom</artifactId>
-        <groupId>fr.paris.lutece.plugins</groupId>
-        <version>3.7</version>
+        <artifactId>lutece-global-pom</artifactId>
+        <groupId>fr.paris.lutece.tools</groupId>
+        <version>3.0.9</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -82,9 +82,10 @@
             <version>1.3.4</version>
         </dependency>
     </dependencies>
+    
     <scm>
-        <connection>scm:svn:http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/module-jpa-hibernate</connection>
-        <developerConnection>scm:svn:https://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/module-jpa-hibernate</developerConnection>
-        <url>http://dev.lutece.paris.fr/viewvc/lutece/portal/trunk/plugins/technical/module-jpa-hibernate</url>
+        <connection>scm:git:https://github.com/lutece-platform/lutece-orm-module-jpa-hibernate.git</connection>
+        <developerConnection>scm:git:https://github.com/lutece-platform/lutece-orm-module-jpa-hibernate.git</developerConnection>
+        <url>https://github.com/lutece-platform/lutece-orm-module-jpa-hibernate.git</url>
     </scm>
 </project>
