--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <groupId>fr.paris.lutece.plugins</groupId>
     <artifactId>module-jpa-hibernate</artifactId>
     <packaging>lutece-plugin</packaging>
-    <version>1.0.7</version>
+    <version>1.0.8-SNAPSHOT</version>
     <name>Lutece jpa-hibernate module</name>
 
     <properties>
@@ -87,6 +87,6 @@
         <connection>scm:git:https://github.com/lutece-platform/lutece-orm-module-jpa-hibernate.git</connection>
         <developerConnection>scm:git:https://github.com/lutece-platform/lutece-orm-module-jpa-hibernate.git</developerConnection>
         <url>https://github.com/lutece-platform/lutece-orm-module-jpa-hibernate.git</url>
-      <tag>lutece-orm-module-jpa-hibernate-1.0.7</tag>
+      <tag>HEAD</tag>
   </scm>
 </project>
